--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="icon" href="/Images/favicon-16x16.png" type="image/x-icon">
+  <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
   <title>Scriptly</title>
 
 </head>
@@ -157,7 +157,7 @@ data-toggle="modal" data-target="#loginModal">Login</button>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/Images/img2.jpg" class="d-block w-100" alt="...">
+        <img src="img2.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2>Welcome to Scriptly</h2>
           <p>ETechnology,Development and Learning.</p>
@@ -167,7 +167,7 @@ data-toggle="modal" data-target="#loginModal">Login</button>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/Images/img2.jpg" class="d-block w-100" alt="...">
+        <img src="img2.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2>Best Coding Blog</h2>
           <p>ETechnology,Development and Learning.</p>
@@ -177,7 +177,7 @@ data-toggle="modal" data-target="#loginModal">Login</button>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/Images/img3.jpg" class="d-block w-100" alt="...">
+        <img src="img3.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2>Awaard winninf Blog</h2>
           <p>ETechnology,Development and Learning.</p>
@@ -210,7 +210,7 @@ data-toggle="modal" data-target="#loginModal">Login</button>
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/Images/thumb1.png" class="bd-placeholder-img" width="200" height="250" alt="">
+            <img src="thumb1.png" class="bd-placeholder-img" width="200" height="250" alt="">
           </div>
         </div>
       </div>
@@ -226,7 +226,7 @@ data-toggle="modal" data-target="#loginModal">Login</button>
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/Images/thumb2.jpg" class="bd-placeholder-img" width="200" height="250" alt="">
+            <img src="thumb2.jpg" class="bd-placeholder-img" width="200" height="250" alt="">
           </div>
         </div>
       </div>
@@ -244,7 +244,7 @@ data-toggle="modal" data-target="#loginModal">Login</button>
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/Images/thumb2.jpg" class="bd-placeholder-img" width="200" height="250" alt="">
+            <img src="thumb2.jpg" class="bd-placeholder-img" width="200" height="250" alt="">
           </div>
         </div>
       </div>
@@ -260,7 +260,7 @@ data-toggle="modal" data-target="#loginModal">Login</button>
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/Images/thumb1.png" class="bd-placeholder-img" width="200" height="250" alt="">
+            <img src="thumb1.png" class="bd-placeholder-img" width="200" height="250" alt="">
 
           </div>
         </div>
