--- a/index.html
+++ b/index.html
@@ -11,25 +11,36 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
   <title>Scriptly</title>
+  <style>
+    /* Ensure the carousel image is responsive */
+    .carousel-inner img {
+      width: 100%;
+      height: auto;
+    }
 
+    /* To make sure navbar items are well-aligned on smaller screens */
+    .navbar-toggler {
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    /* Adjusting button size */
+    .btn {
+      padding: 10px 20px;
+      font-size: 14px;
+    }
+  </style>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <!-- Brand -->
       <a class="navbar-brand" href="#">Scriptly</a>
-
-      <!-- Toggler Button -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
-      <!-- Collapsible Content -->
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <!-- Links -->
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Home</a>
           </li>
@@ -63,11 +74,8 @@
       <button class="btn btn-outline-warning" style="height: 35px;" type="submit">Search</button>
     </form>
     <div class="mx-2 d-flex">
-      <!-- Sign Up Button -->
       <button type="button" style="height: 40px; width: 100px;" class="btn btn-outline-success"
         data-toggle="modal" data-target="#signUpModal">Sign Up</button>
-
-      <!-- Login Button -->
       <button type="button" style="height: 40px; width: 100px;" class="btn btn-outline-info"
         data-toggle="modal" data-target="#loginModal">Login</button>
     </div>
@@ -143,7 +151,7 @@
   </div>
 
   <!-- Carousel -->
-  <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-interval="5000">
+  <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -191,41 +199,12 @@
     </a>
   </div>
 
-  <!-- Main Content -->
-  <div class="container my-4">
-    <div class="row mb-2">
-      <div class="col-md-6">
-        <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">World</strong>
-            <h3 class="mb-0">Featured post</h3>
-            <div class="mb-1 text-muted">Nov 12</div>
-            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="stretched-link">Continue reading</a>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-            <img src="thumb1.png" class="bd-placeholder-img" width="200" height="250" alt="">
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-success">Design</strong>
-            <h3 class="mb-0">Learn Designing</h3>
-            <div class="mb-1 text-muted">Nov 11</div>
-            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="stretched-link">Continue reading</a>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-            <img src="thumb2.jpg" class="bd-placeholder-img" width="200" height="250" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JbCwG4zR5eT8dXZp5zVfVuUayWl8v5jFnoDfwq1t1+q2oFcBb0nXGg5MChWZj9AK" crossorigin="anonymous"></script>
+</body>
+
+</html>
