--- a/index.html
+++ b/index.html
@@ -11,41 +11,30 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
   <title>Scriptly</title>
-  <style>
-    /* Ensure the carousel image is responsive */
-    .carousel-inner img {
-      width: 100%;
-      height: auto;
-    }
 
-    /* To make sure navbar items are well-aligned on smaller screens */
-    .navbar-toggler {
-      border: 1px solid rgba(255, 255, 255, 0.1);
-    }
-
-    /* Adjusting button size */
-    .btn {
-      padding: 10px 20px;
-      font-size: 14px;
-    }
-  </style>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
+      <!-- Brand -->
       <a class="navbar-brand" href="#">Scriptly</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+
+      <!-- Toggler Button -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
+      <!-- Collapsible Content -->
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ms-auto">
+          <!-- Links -->
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
               Topics
             </a>
@@ -60,7 +49,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link " href="/about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact.html">Contact us</a>
@@ -74,83 +63,92 @@
       <button class="btn btn-outline-warning" style="height: 35px;" type="submit">Search</button>
     </form>
     <div class="mx-2 d-flex">
-      <button type="button" style="height: 40px; width: 100px;" class="btn btn-outline-success"
-        data-toggle="modal" data-target="#signUpModal">Sign Up</button>
-      <button type="button" style="height: 40px; width: 100px;" class="btn btn-outline-info"
-        data-toggle="modal" data-target="#loginModal">Login</button>
+<!-- Sign Up Button -->
+<button type="button" style="height: 40px; width: 100px;" class="btn btn-outline-success" 
+  data-toggle="modal" data-target="#signUpModal">Sign Up</button>
+
+      <!-- Login Button -->
+<button type="button" style="height: 40px; width: 100px;" class="btn btn-outline-info" 
+data-toggle="modal" data-target="#loginModal">Login</button>
+
     </div>
   </nav>
 
-  <!-- Login Modal -->
-  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="loginModalLabel">Login</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="mb-3">
-              <label for="signUpUsername" class="form-label">Username</label>
-              <input type="text" class="form-control" id="signUpUsername">
-            </div>
-            <div class="mb-3">
-              <label for="InputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="InputPassword1">
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Login</button>
-        </div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="loginModalLabel">Login</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="signUpUsername" class="form-label">Username</label>
+            <input type="text" class="form-control" id="signUpUsername">
+          </div>
+          <div class="mb-3">
+            <label for="InputPassword1" class="form-label">Password</label>
+            <input type="password" class="form-control" id="InputPassword1">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Login</button>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- Sign Up Modal -->
-  <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="signUpModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="signUpModalLabel">Sign Up</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="mb-3">
-              <label for="signUpEmail" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="signUpEmail" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-            </div>
-            <div class="mb-3">
-              <label for="signUpUsername" class="form-label">Username</label>
-              <input type="text" class="form-control" id="signUpUsername">
-            </div>
-            <div class="mb-3">
-              <label for="signUpPassword" class="form-label">Password</label>
-              <input type="password" class="form-control" id="signUpPassword">
-            </div>
-            <div class="mb-3">
-              <label for="signUpConfirmPassword" class="form-label">Confirm Password</label>
-              <input type="password" class="form-control" id="signUpConfirmPassword">
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Sign Up</button>
-        </div>
+
+
+
+<!-- Sign Up Modal -->
+<div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="signUpModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="signUpModalLabel">Sign Up</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="signUpEmail" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="signUpEmail" aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          </div>
+          <div class="mb-3">
+            <label for="signUpUsername" class="form-label">Username</label>
+            <input type="text" class="form-control" id="signUpUsername">
+          </div>
+          <div class="mb-3">
+            <label for="signUpPassword" class="form-label">Password</label>
+            <input type="password" class="form-control" id="signUpPassword">
+          </div>
+          <div class="mb-3">
+            <label for="signUpConfirmPassword" class="form-label">Confirm Password</label>
+            <input type="password" class="form-control" id="signUpConfirmPassword">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Sign Up</button>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- Carousel -->
+
   <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -162,30 +160,30 @@
         <img src="img2.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2>Welcome to Scriptly</h2>
-          <p>Technology, Development, and Learning.</p>
-          <button class="btn btn-danger">Technology</button>
-          <button class="btn btn-primary">Development</button>
-          <button class="btn btn-success">Tech Fun</button>
+          <p>ETechnology,Development and Learning.</p>
+          <botton class="btn btn-danger">Technology</botton>
+          <botton class="btn btn-primary">Development</botton>
+          <botton class="btn btn-success">Tech Fun</botton>
         </div>
       </div>
       <div class="carousel-item">
         <img src="img2.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2>Best Coding Blog</h2>
-          <p>Technology, Development, and Learning.</p>
-          <button class="btn btn-danger">Technology</button>
-          <button class="btn btn-primary">Development</button>
-          <button class="btn btn-success">Tech Fun</button>
+          <p>ETechnology,Development and Learning.</p>
+          <botton class="btn btn-danger">Technology</botton>
+          <botton class="btn btn-primary">Development</botton>
+          <botton class="btn btn-success">Tech Fun</botton>
         </div>
       </div>
       <div class="carousel-item">
         <img src="img3.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h2>Award Winning Blog</h2>
-          <p>Technology, Development, and Learning.</p>
-          <button class="btn btn-danger">Technology</button>
-          <button class="btn btn-primary">Development</button>
-          <button class="btn btn-success">Tech Fun</button>
+          <h2>Awaard winninf Blog</h2>
+          <p>ETechnology,Development and Learning.</p>
+          <botton class="btn btn-danger">Technology</botton>
+          <botton class="btn btn-primary">Development</botton>
+          <botton class="btn btn-success">Tech Fun</botton>
         </div>
       </div>
     </div>
@@ -198,13 +196,101 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+  <div class="container my-4">
+    <div class="row mb-2">
+      <div class="col-md-6">
+        <div
+          class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-primary">World</strong>
+            <h3 class="mb-0">Featured post</h3>
+            <div class="mb-1 text-muted">Nov 12</div>
+            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
+              additional content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img src="thumb1.png" class="bd-placeholder-img" width="200" height="250" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div
+          class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-success">Design</strong>
+            <h3 class="mb-0">Learn Designing</h3>
+            <div class="mb-1 text-muted">Nov 11</div>
+            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional
+              content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img src="thumb2.jpg" class="bd-placeholder-img" width="200" height="250" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row mb-2">
+      <div class="col-md-6">
+        <div
+          class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-primary">World</strong>
+            <h3 class="mb-0">Featured post</h3>
+            <div class="mb-1 text-muted">Nov 12</div>
+            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
+              additional content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img src="thumb2.jpg" class="bd-placeholder-img" width="200" height="250" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div
+          class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-success">Design</strong>
+            <h3 class="mb-0">Learn Designing</h3>
+            <div class="mb-1 text-muted">Nov 11</div>
+            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional
+              content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img src="thumb1.png" class="bd-placeholder-img" width="200" height="250" alt="">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-header">
+      Featured
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
-    integrity="sha384-JbCwG4zR5eT8dXZp5zVfVuUayWl8v5jFnoDfwq1t1+q2oFcBb0nXGg5MChWZj9AK" crossorigin="anonymous"></script>
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
